--- a/src/components/package.json
+++ b/src/components/package.json
@@ -16,9 +16,7 @@
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll"
   },
-  "dependencies": {
-    "@q/styles": "^0.6.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@stencil/core": "~0.16.2",
     "@stencil/sass": "^0.1.1"
