--- a/src/javascript-sample/package.json
+++ b/src/javascript-sample/package.json
@@ -16,6 +16,7 @@
         "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
         "@babel/polyfill": "^7.2.5",
         "@babel/preset-env": "^7.3.1",
+        "@babel/plugin-syntax-dynamic-import": "^7.2.0",
         "babel-loader": "^8.0.5",
         "copy-webpack-plugin": "^4.6.0",
         "webpack": "^4.29.3",
