--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,3 +20,8 @@ steps:
     npm install
     npm run build
   displayName: 'npm install and build'
+
+- task: Npm@1
+  inputs:
+    command: 'publish'
+    publishEndpoint: 'myget'
