--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,8 @@ steps:
     cd ./src/components
     npm install
     npm run build
-  displayName: 'npm install and build'
+    npm run version-bump -- --alpha --version=($Build.BuildNumber)
+  displayName: 'npm install, build and bump-version'
 
 - task: Npm@1
   inputs:
